# rust-agentic-game-generator

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
.cursor/rules/: rust.mdc
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: auto-assign.yml  docs.yml  ollama-pr-review.yml  release.yml  rust.yml
ai-client-rs/: Cargo.toml  README.md
ai-client-rs/.github/workflows/: rust.yml
ai-client-rs/examples/: simple.rs
ai-client-rs/src/: audio.rs  cache.rs  embeddings.rs  image.rs  lib.rs  text.rs  tokens.rs
bevy-combat/: Cargo.toml
bevy-combat/src/: damage.rs  effects.rs  lib.rs  progression.rs  state.rs
docs/: conf.py  requirements.txt
memory-bank/: FINAL-STATUS-2025-12-25.md  activeContext.md  progress-2025-12-25-06-15.md  progress.md  techContext.md
scripts/: verify-ci-setup.sh
vintage_ai_client/: Cargo.toml
vintage_ai_client/prompts/audio/: battle_music.jinja  sound_effect.jinja  theme_song.jinja  victory_fanfare.jinja
vintage_ai_client/prompts/image/: sprite.jinja  style_consistency.jinja  style_guide.jinja  tileset.jinja
vintage_ai_client/prompts/system/: dialogue_writer.jinja  game_designer.jinja
vintage_ai_client/prompts/text/: code_generation.jinja  concept_art.jinja  game_description.jinja  marketing_tagline.jinja
vintage_ai_client/src/: audio.rs  cache.rs  client.rs  consistency.rs  embeddings.rs  game_types.rs  image.rs  lib.rs  realtime_api_explanation.md  text.rs  tokens.rs
vintage_ai_client/src/conversation/: game_generation.rs  manager.rs  mod.rs  starters.rs  types.rs
vintage_blending_core/: Cargo.toml  README.md
vintage_blending_core/src/: graph.rs  lib.rs  metadata.rs  similarity.rs  types.rs
vintage_build_tools/: Cargo.toml
vintage_build_tools/src/: ai_analysis.rs  api.rs  generator.rs  graph.rs  images.rs  lib.rs  templates.rs  types.rs
vintage_build_tools/templates/ai_analysis/: batch_analysis.jinja
vintage_game_generator/: Cargo.toml  README.md  build.rs  test_app.sh  test_toml_parsing.rs
vintage_game_generator/assets/wizard/: programming_languages_icons.ron  under_construction_overlay_transparent.ron  vintage_timeline.json  welcome_mode_selection.ron
vintage_game_generator/docs/: database_integration_reference.rs  metaprompt_system.txt
vintage_game_generator/metaprompts/: 01_game_design_system.jinja  05_style_guide.jinja  06_world_generation.jinja  blend_game_design.jinja  code_combat.jinja
vintage_game_generator/src/: README.md  lib.rs  main.rs
vintage_game_generator/src/metaprompts/: conversation.rs  generator.rs  mod.rs  types.rs  validation.rs  watcher.rs
vintage_game_generator/src/vintage_games/: eras.rs  games.rs  graph.rs  mod.rs  platforms.rs
vintage_game_generator/src/wizard/: config.rs  directories.rs  generate_mode.rs  image_loader.rs  list_mode.rs  mod.rs  mode.rs  overlay.rs  pipeline.rs  state.rs  ui.rs  watchers.rs
vintage_game_generator/src/wizard/steps/: language.rs  mod.rs  welcome.rs
vintage_game_generator/src/wizard/steps/freeform/: conversation.rs  mod.rs  types.rs
vintage_game_generator/src/wizard/steps/guided/: game_card.rs  mod.rs  timeline.rs  types.rs
vintage_game_generator/src/wizard/steps/guided/blend/: analysis.rs  engine.rs  export.rs  metadata.rs  mod.rs  visualization.rs
vintage_game_generator/templates/giantbomb/: eras.rs.jinja  games.rs.jinja  games_module.rs.jinja  graph.rs.jinja  mod.rs.jinja  platforms.rs.jinja
vintage_game_generator/tests/: integration_tests.rs  test_harness.rs  test_harness_macos.rs
