[workspace]
members = [
    "vintage_ai_client",
    "vintage_blending_core", 
    "vintage_build_tools",
    "vintage_game_generator"
]
resolver = "2"

[workspace.package]
authors = ["Jon Bogaty <jon@jonbogaty.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbcom/rust-vintage-game-generator"

[workspace.dependencies]
# Bevy for the generator UI
bevy = { version = "0.16", default-features = false }
bevy_egui = "0.28"

# AI and async
async-openai = "0.21"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Templating
minijinja = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
dirs = "5"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
