[workspace]
members = ["vintage_ai_client", "vintage_blending_core", "vintage_build_tools", "vintage_game_generator"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Jon Bogaty <jon@jonbogaty.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbcom/rust-vintage-game-generator"
homepage = "https://github.com/jbcom/rust-vintage-game-generator"

[workspace.dependencies]
# AI providers - latest versions
async-openai = { version = "0.32", features = ["full"] }

# Async runtime
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
ron = "0.9"
bincode = "1.3"

# Templating
minijinja = "2.14"

# Caching
sled = "0.34"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4"

# UUID
uuid = { version = "1.19", features = ["v4"] }

# Bevy integration (for UI in generator app)
bevy = "0.16.1"
bevy_egui = "0.35"
bevy-inspector-egui = "0.32"
egui_dock = "0.16"
catppuccin-egui = { version = "5.7", default-features = false }

# Graph algorithms (for blending)
petgraph = "0.7"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "8.2"
syn = { version = "2.0", features = ["full", "parsing"] }
base64 = "0.22"
crossbeam-channel = "0.5"
open = "5.3"
sha2 = "0.10"
zstd = "0.13"
image = "0.25"
regex = "1.11"
tiktoken-rs = "0.7"
dirs = "6.0"
fs_extra = "1.3"
rayon = "1.10"
dotenv = "0.15"
