[package]
name = "bevy-combat"
version = "0.1.0"
edition = "2021"
authors = ["Jon Bogaty <jon@jonbogaty.com>"]
description = "Generic combat systems for Bevy games"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
rand = "0.8"
