[package]
name = "vintage_ai_client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }

# OpenAI API client
async-openai = "0.29"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-middleware = "0.4"

# Token counting
tiktoken-rs = "0.7"

# Caching and utilities
sha2 = "0.10"
bincode = "1.3"
zstd = "0.13"
image = "0.25"
base64 = "0.22"
futures = "0.3"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# Additional dependencies
async-trait = "0.1"
uuid = { version = "1.17", features = ["v4"] }
tokio-stream = { version = "0.1", features = ["fs"] }

# Template engine
minijinja = { version = "2.7", features = ["loader", "preserve_order"] }

# Pattern matching
regex = "1.11"

# Optional Bevy integration
bevy = { version = "0.16.1", optional = true }

[features]
default = []
bevy = ["dep:bevy"]
