[package]
name = "vintage_ai_client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core async runtime
tokio.workspace = true
async-openai = { workspace = true, features = ["full"] }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP client
reqwest = { workspace = true, features = ["stream"] }
reqwest-middleware.workspace = true

# Token counting
tiktoken-rs.workspace = true

# Caching and utilities
sha2.workspace = true
bincode.workspace = true
zstd.workspace = true
image.workspace = true
base64.workspace = true
futures.workspace = true
dirs.workspace = true
chrono.workspace = true

# Logging
tracing.workspace = true

# Additional dependencies
async-trait.workspace = true
uuid.workspace = true
tokio-stream = { workspace = true, features = ["fs"] }

# Template engine
minijinja = { workspace = true, features = ["loader", "preserve_order"] }

# Pattern matching
regex.workspace = true

# Optional Bevy integration
bevy = { workspace = true, optional = true }
async-stream = "0.3.6"

[features]
default = []
bevy = ["dep:bevy"]
