[package]
name = "vintage_blending_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6"
anyhow = "1.0"

# Optional dependencies for advanced features
nalgebra = { version = "0.33", optional = true }

[features]
default = []
# Enable linear algebra operations for feature vectors
linalg = ["nalgebra"]

[dev-dependencies]
pretty_assertions = "1.4"
