[package]
name = "vintage_build_tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Build tools for vintage game data generation"
repository.workspace = true

[dependencies]
# Core dependencies
vintage_blending_core = { path = "../vintage_blending_core" }
vintage_ai_client = { path = "../vintage_ai_client" }

# HTTP and API
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Template engine
minijinja = "2.11"

# Error handling
anyhow = "1.0"

# Utilities
dotenv = "0.15"
chrono = "0.4"
tiktoken-rs = "0.6"

# File system
fs_extra = "1.3"

# Parallel processing
rayon = "1.10"
