[package]
name = "vintage_build_tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Build tools for vintage game data generation"
repository.workspace = true

[dependencies]
# Core dependencies
vintage_blending_core = { path = "../vintage_blending_core" }
vintage_ai_client = { path = "../vintage_ai_client" }

# HTTP and API
reqwest = { workspace = true, features = ["blocking"] }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Template engine
minijinja.workspace = true

# Error handling
anyhow.workspace = true

# Utilities
dotenv.workspace = true
chrono.workspace = true
tiktoken-rs = "0.6" # Keeping 0.6 here if it's specifically needed, or switch to workspace

# File system
fs_extra.workspace = true

# Parallel processing
rayon.workspace = true
