[package]
name = "vintage_game_generator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Visual-first vintage game generator with AI assistance"
repository.workspace = true

[dependencies]
# Core UI Framework
bevy = { workspace = true, features = ["dynamic_linking"] }
bevy_egui.workspace = true
bevy-inspector-egui.workspace = true
egui_dock.workspace = true
catppuccin-egui = { workspace = true, features = ["egui31"] }

# CLI and Configuration
clap = { version = "4.5", features = ["derive"] }
dirs.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
petgraph.workspace = true

# Game Blending
vintage_blending_core = { path = "../vintage_blending_core" }

# AI Integration
vintage_ai_client = { path = "../vintage_ai_client", features = ["bevy"] }
async-openai.workspace = true
tokio.workspace = true
async-stream = "0.3.6"

# Template Engine
minijinja = { workspace = true, features = ["loader"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error Handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
notify.workspace = true
syn.workspace = true
base64.workspace = true
crossbeam-channel.workspace = true
open.workspace = true
sha2.workspace = true
bincode.workspace = true
zstd.workspace = true
image.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio-stream.workspace = true
ron.workspace = true

[[bin]]
name = "vintage_game_generator"
path = "src/main.rs"

[lib]
name = "vintage_game_generator"
path = "src/lib.rs"

[features]
default = []

[build-dependencies]
# Use our build tools package that handles all the build logic
vintage_build_tools = { path = "../vintage_build_tools" }
# Need anyhow for error handling
anyhow.workspace = true
# Need tokio for async build script
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
# Testing utilities
tempfile = "3.24"
futures.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-vcr = "0.3.0"
rand = "0.9"
